--- a/cooperations.tex
+++ b/cooperations.tex
@@ -627,16 +627,16 @@ In particular, the spaces \(\OS{BP\<n\>}{k}\) in these bands \emph{are} independ
 
 \section{Dieudonn\'e modules}\label{SectionDieudonneModules}
 
-Our goal in this Lecture is to give a compact presentation of what a formal group is based on the following observation: the category of commutative cocommutative Hopf algebras of finite type over a ground field \(k\) forms an abelian category.  It follows abstractly that this category admits a presentation as the module category for some (possibly noncommutative) ring, but in fact this ring and the assignment from a group scheme to linear algebraic data can both be described explicitly.  This is the subject of \textit{Dieudonn\'e theory}, and our goal is to give an overview of some of its main results, including two different presentations of the equivalence.\footnote{Emphasis on ``\emph{some of its results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry and the theory of abelian varieties.  We will explore almost none of this.}
+Our goal in this Lecture is to give a compact presentation of formal groups based on the following observation: the category of commutative cocommutative Hopf algebras of finite type over a ground field \(k\) forms an abelian category.  It follows abstractly that this category admits a presentation as the module category for some (possibly noncommutative) ring, but in fact this ring and the assignment from a group scheme to linear algebraic data can both be described explicitly.  This is the subject of \textit{Dieudonn\'e theory}, and we will give an overview of some of its main results, including two different presentations of the equivalence.\footnote{Emphasis on ``\emph{some of its results}''.  Dieudonn\'e theory is an enormous subject with many interesting results both internal and connected to arithmetic geometry and the theory of abelian varieties.  We will explore almost none of this.}
 
-In the first presentation, we follow notes by Weinstein~\cite[Lecture 1]{Weinstein}.  Begin with a \(1\)--dimensional formal group \(\G\) over a ring \(A\).  Our first avenue into Dieudonn\'e theory is to recall that we have previously been interested in the invariant differentials \(\omega_{\G} \subseteq \Omega^1_{\G/A}\) on \(\G\).  As explored in \Cref{RationalFGLsHaveLogarithms}, when \(A\) is a \(\Q\)--algebra such differentials give rise to logarithms through integration.  On the other hand, if \(A\) has positive characteristic \(p\) then there is a potential obstruction to integrating terms with exponents of the form \(-1 \pmod p\), and in \Cref{MfgII:LargeScales} we used this to lead us to the notion of \(p\)--height.  We now explore a third twist on this set-up.  Recall that \(\Omega^1_{\G/A}\) forms the first level of the \index{de Rham complex}\textit{algebraic de Rham complex} \(\Omega^*_{\G/A}\).  The de Rham complex only uses the underlying formal variety of \(\G\) and not its group structure, but the product map \[\mu\co \G \times \G \to \G\] and the two projection maps \[\pi_1, \pi_2\co \G \times \G \to \G\] induce maps \[\mu^*, \pi_1^*, \pi_2^*\co C_{dR}^1(\G/A) \to C_{dR}^1(\G \times \G / A).\]  The translation invariant differentials are exactly those in the kernel of \(\mu^* - \pi_1^* - \pi_2^*\), as considered at the chain level.  We can weaken this to request only that that difference be \emph{exact}, or zero at the level of cohomology of the de Rham complex.
+In the first presentation, we follow notes by Weinstein~\cite[Lecture 1]{Weinstein}.  Begin with a \(1\)--dimensional formal group \(\G\) over a ring \(A\).  Our first avenue into Dieudonn\'e theory is to recall that we have previously been interested in the invariant differentials \(\omega_{\G} \subseteq \Omega^1_{\G/A}\) on \(\G\).  As explored in \Cref{RationalFGLsHaveLogarithms}, when \(A\) is a \(\Q\)--algebra such differentials give rise to logarithms through integration.  On the other hand, if \(A\) has positive characteristic \(p\) then there is a potential obstruction to integrating terms with exponents of the form \(-1 \pmod p\), and in \Cref{MfgII:LargeScales} we used this to lead us to the notion of \(p\)--height.  We now explore a third twist on this set-up, recalling that \(\Omega^1_{\G/A}\) forms the first level of the \index{de Rham complex}\textit{algebraic de Rham complex} \(\Omega^*_{\G/A}\).  The product map \[\mu\co \G \times \G \to \G\] and the two projection maps \[\pi_1, \pi_2\co \G \times \G \to \G\] induce maps \[\mu^*, \pi_1^*, \pi_2^*\co C_{dR}^1(\G/A) \to C_{dR}^1(\G \times \G / A).\]  The translation invariant differentials are exactly those in the kernel of \(\mu^* - \pi_1^* - \pi_2^*\), as considered at the chain level.  We can weaken this to request only that that difference be \emph{exact}, or zero at the level of cohomology of the de Rham complex.
 
 \begin{definition}
-The \index{Kahler differentials@K\"ahler differentials!cohomologically invariant}\textit{cohomologically translation invariant differentials} is the \(A\)--submodule \(PH^1_{dR}(\G/A) \subseteq H^1_{dR}(\G/A)\) defined as the kernel of \(\mu^* - \pi_1^* - \pi_2^*\).\footnote{The symbol ``$P$'' here denotes the primitives.  Using the identity $\mu^* = \Delta$, the equation $\Delta(x) = x \otimes 1 + 1 \otimes x$ holds if and only if $x$ lies in the kernel of this operator.}
+The \index{Kahler differentials@K\"ahler differentials!cohomologically invariant}\textit{cohomologically translation invariant differentials} constitute the \(A\)--submodule \(PH^1_{dR}(\G/A) \subseteq H^1_{dR}(\G/A)\) defined as the kernel of \(\mu^* - \pi_1^* - \pi_2^*\).\footnote{The symbol ``$P$'' here denotes the primitives.  Using the identity $\mu^* = \Delta$, the equation $\Delta(x) = x \otimes 1 + 1 \otimes x$ holds if and only if $x$ lies in the kernel of this operator.}
 \end{definition}
 
 \begin{example}{\cite[Lemma 5.1.2]{Katz}}
-Consider the case that \(A\) is torsion-free (or ``\(\Z\)--flat'', if you like), and set \(K = A \otimes \Q\) so that \(A \to K\) is an injection.  In this case the differentiation map \(x A\ps{x} \to A\ps{x}\) is an injection and integration of power series is possible in \(K\), so we can re-express first the definition of \(H^1_{dR}\) and second the conditions on our algebraic differentials in the following diagram of exact rows:
+Consider the case that \(A\) is torsion-free,\footnote{Or, if you like, ``\(\Z\)--flat''.} and set \(K = A \otimes \Q\) so that \(A \to K\) is an injection.  In this case the differentiation map \(x A\ps{x} \to A\ps{x}\) is an injection and integration of power series is possible in \(K\), so we can re-express first the definition of \(H^1_{dR}\) and second the conditions on our algebraic differentials in the following diagram of exact rows:
 \begin{center}
 \begin{tikzcd}[column sep=0.5em, row sep=0.22em]
 0 \arrow{r} & \left\{\begin{array}{c}\text{integrals} \\ \text{with \(A\)} \\ \text{coeff\textsuperscript{s}}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{all formal integrals} \\ \text{of differentials} \\ \text{defined over \(A\)}\end{array}\right\} \arrow{r} \arrow[equal]{d} & \left\{\begin{array}{c}\text{missing} \\ \text{integrals}\end{array}\right\} \arrow{r} \arrow[equal]{d} & 0 \\
@@ -655,7 +655,7 @@ where \(x\) is a coordinate on \(\G\), and \(\delta\) is defined by \(\delta [\o
 % Let \(A\) be a complex abelian variety, in which case there is a classical Hodge decomposition \[0 \to H^0(A; \Omega^1) \to H^1_{dR}(A; \C) \to H^1(A; \sheaf O_A) \to 0.\]  The first term agrees with invariant differentials, and the second term agrees with \(\operatorname{Lie} A^\vee\).
 % \end{remark}
 
-The flatness condition is not satisfied when working over a perfect field of positive characteristic \(p\)---our favorite setting in \Cref{MfgII:LargeScales} and \Cref{ChapterFiniteSpectra} more generally.  However, de Rham cohomology has the following remarkable lifting property (which we have written here after specializing to \(H^1_{dR}\)):
+The flatness condition is not satisfied when working over a perfect field of positive characteristic \(p\)---our favorite setting in \Cref{MfgII:LargeScales} and \Cref{ChapterFiniteSpectra} more generally---and without it we cannot make the identifications in the Example.  However, de Rham cohomology has the following remarkable lifting property (which we have written here after specializing to \(H^1_{dR}\)):
 
 \begin{theorem}[{\index{Poincar\'e Lemma}Poincar\'e Lemma; \cite[Key Lemma 5.1.3]{Katz}}]
 Let \(A\) be a \(p\)--local torsion-free ring, and let \(f_1(x), f_2(x) \in x A\ps{x}\) be power series without constant term.  If \(f_1 \equiv f_2 \pmod{p}\), then for any differential \(\omega \in A\ps{x} dx\) the difference \(f_1^*(\omega) - f_2^*(\omega)\) is exact.
@@ -696,11 +696,11 @@ Note that the module \(D^*(\G_0)\) carries some natural operations:
 With this, we come to the main theorem of this Lecture:
 
 \begin{theorem}[{\cite[Th\'eor\`eme 4.2]{GrothendieckCristaux}, \cite[Sections III.8-9]{Demazure}}]\label{MainContraDieudonneThm}
-The (de Rham--Dieudonn\'e) functor \(D^*\) determines a contravariant equivalence of categories between smooth \(1\)--dimensional formal groups \(\G_0\) over \(k\) of finite \(p\)--height and \index{Dieudonn\'e module}\textit{Dieudonn\'e modules}, which are modules \(M\) over the ring \[\Cart_p = \left. \W_p(k)\<F,V\> \middle/ \left( \begin{array}{c} FV = VF = p, \\ Fw = w^\phi F, \\ wV = Vw^\phi \end{array} \right) \right.\] which are additionally free and finite rank over \(\W_p(k)\).
+The (de Rham--Dieudonn\'e) functor \(D^*\) determines a contravariant equivalence of categories between smooth \(1\)--dimensional formal groups \(\G_0\) over \(k\) of finite \(p\)--height and \index{Dieudonn\'e module}\textit{Dieudonn\'e modules}, which are modules \(M\) over the ring \[\Cart_p = \left. \W_p(k)\<F,V\> \middle/ \left( \begin{array}{c} FV = VF = p, \\ Fw = w^\phi F, \\ wV = Vw^\phi \end{array} \right) \right.\] which are additionally free and finite rank over \(\W_p(k)\). \qed
 \end{theorem}
 
 \begin{remark}
-Several invariants of the formal group associated to a Dieudonn\'e module can be read off from the functor \(D^*\).  For example, the \(\W_p(k)\)--rank of \(D^*(\G_0)\) computes the height of \(\G_0\).  Additionally, the quotient \(D^*(\G_0) / FD^*(\G_0)\) is canonically isomorphic to the cotangent space \(T_0^* \G_0 \cong \omega_{\G_0}\).
+Several invariants of the formal group associated to a Dieudonn\'e module can be read off from the functor \(D^*\).  For example, the \(\W_p(k)\)--rank of \(D^*(\G_0)\) computes the height of \(\G_0\).  Additionally, the quotient \(D^*(\G_0) / FD^*(\G_0)\) is canonically isomorphic to the cotangent space \(T_0^* \G_0 \cong \omega_{\G_0}\), so that \[\dim \G_0 = \dim_k D^*(\G_0) / FD^*(\G_0).\]
 \end{remark}
 
 \begin{example}
@@ -712,11 +712,11 @@ We also give a kind of non-example: \(\G_a\) is \emph{not} a finite height forma
 \end{example}
 
 \begin{example}[{cf.\ \Cref{Alpha2Example}}]\label{WorkedAlpha2Example}
-Dieudonn\'e theory admits an extension to finite (flat) group schemes as well, and the appropriate quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to the appropriate subscheme: \[D^*(\G_0[p^j]) = D^*(\G_0) / p^j.\]  For example, this gives \[D^*(\G_m[p]) = \left.\F_p\{x\} \middle/\left(\begin{array}{c} Fx = 0, \\ Vx = x \end{array}\right)\right. .\]  We extract the subgroup scheme \(\alpha_2\) as the finite Dieudonn\'e quotient module \(D^*(\alpha_2) = \F_2\{x\} \leftarrow D^*(\G_a)\) of the Dieudonn\'e module associated to \(\G_a\) above.  We can now verify the four claims from \Cref{Alpha2Example}:
+Dieudonn\'e theory admits an extension to finite group schemes over \(k\) as well, and the appropriate quotient of the Dieudonn\'e module of a formal group agrees with the Dieudonn\'e module associated to the appropriate subscheme: \[D^*(\G_0[p^j]) = D^*(\G_0) / p^j.\]  For example, this gives \[D^*(\G_m[p]) = \left.\F_p\{x\} \middle/\left(\begin{array}{c} Fx = 0, \\ Vx = x \end{array}\right)\right. .\]  We extract the subgroup scheme \(\alpha_2\) as the finite Dieudonn\'e quotient module \(D^*(\alpha_2) = \F_2\{x\} \leftarrow D^*(\G_a)\) of the Dieudonn\'e module associated to \(\G_a\) above.  We can now verify the four claims from \Cref{Alpha2Example}:
 \begin{itemize}
 \item \textit{The group scheme \(\alpha_2\) has the same underlying structure ring as \(\mu_2 = \mathbb{G}_m[2]\) but is not isomorphic to it.}  There are now several ways to see this, the simplest of which is that the Verschiebung operator acts nontrivially on \(D^*(\mu_2)\) but wholly trivially on \(D^*(\alpha_2)\).\footnote{See also~\cite[Example 8.5]{StricklandFPFP}.}
 \item \textit{There is no commutative group scheme \(G\) of rank four such that \(\alpha_2 = G[2]\).}  Suppose that \(G\) were such a group scheme, so that \(D^*(G) / 2\) would give \(D^*(\alpha_2)\).  It can't be the case that \(D^*(G)\) has only \(2\)--torsion, since then this quotient would be a null operation, so it must be the case that \(D^*(G) = \Z/4\{x\}\).  The action of both \(F\) and \(V\) on \(x\) must vanish after quotienting by \(2\), so it must be the case that \(Fx = 2cx\) and \(Vx = 2dx\) for some constants \(c\) and \(d\)---but this violates \(FVx = 2x\).
-\item \textit{If \(E/\mathbb{F}_2\) is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  This follows from calculating the action of \(F\) and \(V\) to get a short exact sequence of Dieudonn\'e modules: \[0 \to \F_2\{Fx\}/(F, V) \to \left.\F_2\{x, Fx\} \middle/ \left( \begin{array}{c} F^2x = 0, \\ V = 0 \end{array}\right) \right. \to \F_2\{x\}/(F, V) \to 0.\]  The exact sequence is split as \(\F_2\)--modules, but not as Dieudonn\'e modules.
+\item \textit{If \(E/\mathbb{F}_2\) is the supersingular elliptic curve, then there is a short exact sequence \[0 \rightarrow \alpha_2 \rightarrow E[2] \rightarrow \alpha_2 \rightarrow 0.\]  However, this short exact sequence doesn't split (even after making a base change).}  One definition of \textit{supersingular} is that \(\widehat E\) is a formal group of height \(2\).  The claim then follows from calculating the action of \(F\) and \(V\) to get a short exact sequence of Dieudonn\'e modules: \[0 \to \F_2\{Fx\}/(F, V) \to \left.\F_2\{x, Fx\} \middle/ \left( \begin{array}{c} F^2x = 0, \\ V = 0 \end{array}\right) \right. \to \F_2\{x\}/(F, V) \to 0.\]  The exact sequence is split as \(\F_2\)--modules, but not as Dieudonn\'e modules.
 \item \textit{The subgroups of \(\alpha_2 \times \alpha_2\) of rank two are parameterized by \(\mathbb{P}^1\).}  The Dieudonn\'e module of the product is quickly computed: \[D^*(\alpha_2 \times \alpha_2) = D^*(\alpha_2) \oplus D^*(\alpha_2) = \left.\F_2\{x_1, x_2\} \middle/ \left( \begin{array}{c} F = 0, \\ V = 0 \end{array} \right) \right. .\]  An inclusion of a rank \(2\) subgroup scheme corresponds to a projection of this Dieudonn\'e module onto a \(1\)--dimensional quotient module, and the ways to choose the kernel of this projection encompass a \(\P^1\).
 \end{itemize}
 \end{example}
@@ -740,7 +740,7 @@ There is also a relationship between this representation of the Dieudonn\'e func
 associated to the group scheme extension \(E\) classified by \(e(f)\).  Studying the universal extension of \(\G\) by an additive formal group is an exceedingly interesting thing to do~\cite[Section V.4]{GrothendieckCristaux}, \cite{MazurMessing}, \cite[Section 11]{HopkinsGrossEquivVBs}.
 \end{remark}
 
-Having gotten some feel for the behavior and the usefulness of the Dieudonn\'e functor, we now turn our attention to some alternative presentations of it.  In this next presentation we will not have to worry about lifts to \(\W_p(k)\), so we take \(\G\) itself to be a formal group over a perfect field \(k\) of positive characteristic \(p\).  Cartier's \index{Dieudonn\'e module}\textit{functor of curves} is defined by the formula \[C\G = \CatOf{FormalSchemes}(\A^1, \G).\]  This is, again, a kind of relaxing of familiar data from Lie theory, taken from a different direction: rather than studying just the exponential curves, \(C\G\) tracks all possible curves.  In \Cref{MfgII:LargeScales}, we considered three kinds of operations on a given curve \(\gamma\co \A^1 \to \G\):
+Having gotten some feel for the behavior and the usefulness of the Dieudonn\'e functor, we now turn our attention to an alternative presentation of it.  We will not have to worry about lifts to \(\W_p(k)\) in the part, so we take \(\G\) itself to be a formal group over a perfect field \(k\) of positive characteristic \(p\).  Cartier's \index{Dieudonn\'e module}\textit{functor of curves} is defined by the formula \[C\G = \CatOf{FormalSchemes}(\A^1, \G).\]  This is, again, a kind of relaxing of familiar data from Lie theory, taken from a different direction: rather than studying just the exponential curves, \(C\G\) tracks all possible curves.  In \Cref{MfgII:LargeScales}, we considered three kinds of operations on a given curve \(\gamma\co \A^1 \to \G\):
 \begin{itemize}
 \item \index{homothety}Homothety: given a scalar \(a \in A\), we define \(\theta_a \gamma(t) = \gamma(a \cdot t)\).
 \item \index{Verschiebung}Verschiebung: given an integer \(n \ge 1\), we define \(V_n \gamma(t) = \gamma(t^n)\).
@@ -765,16 +765,6 @@ The (Cartier--Dieudonn\'e) functor \(D_*\) determines a \emph{covariant} equival
 \begin{theorem}[{\cite[Section II.15]{MazurMessing}}]\label{DieudonneDualityThm}\footnote{This is a remarkbly difficult theorem to prove, cf.\ \Cref{OpenQuestionsSection}.}
 There is a natural isomorphism \[(D_* \G_0)^* \cong D^* \G_0. \pushQED\qed\qedhere\popQED\]
 \end{theorem}
-
-\begin{remark}[{\cite[Remark 18.1]{StricklandFPFP}}]
-A coordinate \(x\) on \(\CP^\infty_E\) induces a sequence of isomorphisms
-\begin{align*}
-\CatOf{FormalGroups}(BU_E, \G) & \cong \CatOf{FormalSchemes}(\CP^\infty_E, \G) \\
-& \stackrel{x}{\cong} \CatOf{FormalSchemes}(\A^1, \G) \\
-& = C\G,
-\end{align*}
-which presents \(E^* BU\) as the Witt Hopf algebra.  However, this isomorphism is not especially interesting: for one, it is \emph{highly} dependent upon the choice of coordinate, but also the far right-hand object has no dependence on \(\CP^\infty_E\), and so the operations we have been studying---formal group auto- and endomorphisms of \(\CP^\infty_E\), mainly---do not act, and this isomorphism cannot be equivariant in any useful sense.  The reader is advised \emph{not} to adopt this perspective.
-\end{remark}
 
 \begin{remark}[{\cite[Chapitre VI]{GrothendieckCristaux}}]
 The contravariant Dieudonn\'e functor described above has a natural extension by choosing lifts over other pro-Artinian \(k\)--algebras, like the \index{Lubin Tate stack@Lubin--Tate stack}Lubin--Tate moduli stack of \Cref{LubinTateDefn}.  The resulting network of objects most naturally organizes into a sheaf over the \index{crystal!crystalline site}\textit{crystalline site}, but it is possible in this setting to re-express such a sheaf as a quasi-coherent sheaf over the Lubin--Tate stack which is equipped with a flat connection, and it is additionally acted upon by the familiar operators \(F\) and \(V\).
@@ -911,15 +901,28 @@ It is also possible to build versions of Dieudonn\'e theory over still more exot
 \textbf{Convention: We will write \(H\) for \(\HFp\) for the duration of the lecture.}
 \end{center}
 
-Our goal in this Lecture is to put Dieudonn\'e modules to work for us in algebraic topology.  The executive summary of Dieudonn\'e theory is that it gives a \emph{linear} presentation of the theory of Hopf algebras.  From the perspective of algebraic topology, functors sending cofiber sequences to exact sequences in a linear category are precisely the homology functors.  Tying these two ideas together, if we can find a functor that sends exact sequences of spaces (or spectra) to exact sequences of Hopf algebras, we can post-compose it with a suitable version of the Dieudonn\'e functor to get a homology functor and hence a \emph{spectrum}.
+Our goal in this Lecture is to put Dieudonn\'e modules to work for us in algebraic topology.  The executive summary of Dieudonn\'e theory is that it gives a \emph{linear} presentation of the theory of Hopf algebras.  From the perspective of algebraic topology, functors sending cofiber sequences to exact sequences in a linear category are precisely homology functors.  Tying these two ideas together, if we can find a functor that sends exact sequences of spaces (or spectra) to exact sequences of Hopf algebras, we can post-compose it with a suitable version of the Dieudonn\'e functor to get a homology functor and hence a \emph{spectrum}.
 
-To meet algebraic topology in its natural setting, it will be useful to also have a version of Dieudonn\'e theory that is well-adapted to working with formal groups whose coordinate ring forms a \emph{graded} Hopf algebra.  Using as inspiration our previous identification
+To meet algebraic topology in its natural setting, it will be useful to also have a version of Dieudonn\'e theory that is well-adapted to working with formal groups whose coordinate ring forms a \emph{graded} Hopf algebra.  This falls out of an extended study of the covariant Dieudonn\'e module: it can be shown that the functor $D_*$ is representable by the \textit{$p$--typical Witt formal group} $\widehat{\mathbb W}_p$,\footnote{An extremely pleasant perspective on the construction of the Witt scheme is presented by Lazard~\cite[Chapter III]{LazardCFGs}.}\footnote{A coordinate \(x\) on \(\CP^\infty_E\) induces a sequence of isomorphisms
 \begin{align*}
-C(\G) & = \CatOf{FormalSchemes}(\A^1, \G) \\
-& \cong \CatOf{FormalGroups}(\G, \widehat{C\W}_p) \\
-& \cong \CatOf{HopfAlgebras}(\sheaf O_{\widehat{C\W}_p}, \sheaf O_{\G}),
+\CatOf{FormalGroups}(BU_E, \G) & \cong \CatOf{FormalSchemes}(\CP^\infty_E, \G) \\
+& \stackrel{x}{\cong} \CatOf{FormalSchemes}(\A^1, \G) \\
+& = C\G,
 \end{align*}
-we are thus moved to form graded versions of the \index{Witt vectors!Hopf algebra}Witt Hopf algebra.  More precisely, the following theorem says that there are graded versions of the Witt Hopf algebra that give a sequence of projective generators for the category of connected graded Hopf algebras over \(\F_p\):
+which presents \(E^* BU\) as the Witt Hopf algebra.  However, this isomorphism is not especially interesting~\cite[Remark 18.1]{StricklandFPFP}: for one, it is \emph{highly} dependent upon the choice of coordinate, but the far right-hand object has no dependence on \(\CP^\infty_E\), and so the operations we have been studying---formal group auto- and endomorphisms of \(\CP^\infty_E\), mainly---do not act, and this isomorphism cannot be equivariant in any useful sense.} i.e.,
+\begin{center}
+\begin{tikzcd}
+C_* \G \arrow[equal]{r} & \CatOf{FormalSchemes}(\mathbb A^1, \G) \arrow[equal]{r} & \CatOf{FormalGroups}(\widehat{\mathbb W}, \G) \\
+D_* \G \arrow{u} \arrow[equal]{r} & \CatOf{FormalSchemes}(\mathbb A^1, \G)^{\ptyp} \arrow{u} \arrow[equal]{r} & \CatOf{FormalGroups}(\widehat{\mathbb W}_p, \G) \arrow{u} .
+\end{tikzcd}
+\end{center}
+
+The Witt formal scheme has the additional miraculous property that it is dualizable: there is a coWitt formal scheme $\widehat{C\mathbb W}_p$ with
+\begin{align*}
+\CatOf{FormalGroups}(\widehat{\mathbb W}_p, \G) & \cong \CatOf{FormalGroups}(\G, \widehat{C\mathbb W}_p) \\
+& \cong \CatOf{HopfAlgebras}(\sheaf O_{\widehat{C\W}_p}, \sheaf O_{\G}).
+\end{align*}
+We are thus moved to form graded versions of the \index{Witt vectors!Hopf algebra}coWitt Hopf algebra.  More precisely, the following theorem says that there are graded versions of the coWitt Hopf algebra that give a sequence of projective generators for the category of connected graded Hopf algebras over \(\F_p\):
 
 \begin{theorem}[{\cite[Section 3.2]{Schoeller}, \cite[Proposition 1.6]{GLM}}]
 Let \(S(n)\) denote the free graded-commutative Hopf algebra over \(\F_p\) on a single generator in degree \(n > 0\).  There is a projective cover \(H(n) \onto S(n)\), given by the formula
@@ -1011,7 +1014,7 @@ H\Z_k B(n) & = B(n)_n \Susp^{n-k} H\Z \\
 We can use a similar trick as in the second part of the proof to calculate the cohomology groups \(H^* B(n)\):
 
 \begin{definition}[{\cite[Example 3.6]{GLM}}]\label{SpanierWhiteheadDualOfGeneratingModule}
-Let \(G(n)\) be the free \index{Steenrod algebra!unstable module}unstable \(\mathcal A^*\)--module on one generator of degree \(n\), so that if \(M\) is an unstable \(\mathcal A^*\)--module then \[\CatOf{Modules}_{\mathcal A^*}(G(n), M) = M_n.\]  This module admits a presentation as \[G(n) = \begin{cases} \Susp^n \mathcal A / \{\beta^\eps P^i \mid 2pi + 2\eps > n\}\mathcal A & \text{if \(p > 2\)}, \\ \Susp^n \mathcal A / \{\Sq^i \mid 2i > n\}\mathcal A & \text{if \(p = 2\)}. \end{cases}\]  The Spanier--Whitehead dual of this right-module, \(DG(n)\), is given by \[\Susp^n (D G(n))^* = \begin{cases}\mathcal A / \mathcal A \{\chi(\beta^\eps P^i) \mid 2pi + 2\eps > n\} & \text{if \(p > 2\)}, \\ \mathcal A / \mathcal A \{\chi{\Sq^i} \mid 2i > n\} & \text{if \(p = 2\)}. \end{cases}\]
+Let \(G(n)\) be the free \index{Steenrod algebra!unstable module}unstable \(\mathcal A^*\)--module on one generator of degree \(n\), so that if \(M\) is an unstable \(\mathcal A^*\)--module then \[\CatOf{Modules}_{\mathcal A^*}(G(n), M) = M_n.\]  This module admits a presentation as\todo{It would be good to justify the connection between the endomorphism scheme and the grading condition about vanishing squares.} \[G(n) = \begin{cases} \Susp^n \mathcal A / \{\beta^\eps P^i \mid 2pi + 2\eps > n\}\mathcal A & \text{if \(p > 2\)}, \\ \Susp^n \mathcal A / \{\Sq^i \mid 2i > n\}\mathcal A & \text{if \(p = 2\)}. \end{cases}\]  The Spanier--Whitehead dual of this right-module, \(DG(n)\), is given by \[\Susp^n (D G(n))^* = \begin{cases}\mathcal A / \mathcal A \{\chi(\beta^\eps P^i) \mid 2pi + 2\eps > n\} & \text{if \(p > 2\)}, \\ \mathcal A / \mathcal A \{\chi{\Sq^i} \mid 2i > n\} & \text{if \(p = 2\)}. \end{cases}\]
 \end{definition}
 
 \begin{theorem}[{\cite[Proof of Theorem 3.1]{GLM}}]
@@ -1050,7 +1053,7 @@ For \(F = H\) and \(E\) a \index{Landweber flat}Landweber flat homology theory, 
 \noindent We have previously computed that the comparison map \[\AA(H, BP) \to H_* \OS{BP}{2*}\] is an isomorphism.  We will now reimagine this statement in terms of Dieudonn\'e theory, but in order to do this we first have to reimagine some of Dieudonn\'e theory itself, as our description of it is concerned with \emph{Hopf algebras} rather than \emph{Hopf rings}.  A Hopf ring is not much structure on top of an (externally) graded system of (internally) graded Hopf algebras \(A_*\): it is a multiplication map \[\circ\co A_* \boxtimes A_* \to A_*,\] where ``\(\boxtimes\)'' is a kind of graded \index{Hopf algebra!tensor product}tensor product of externally graded Hopf algebras~\cite[Proposition 2.6]{HuntonTurner}, \cite[Definition 2.2]{BuchstaberLazarev}, \cite[Section 5]{GoerssDieudonne}.  Since \(D_*\) gives an equivalence of categories between internally graded Hopf algebras and internally graded Dieudonn\'e modules, we should be able to find an analogous formula for the tensor product of \index{Dieudonn\'e module!tensor product}Dieudonn\'e modules.
 
 \begin{definition}{\cite[pg.\ 154]{GoerssDieudonne}}
-The naive tensor product \(M \otimes N\) of Dieudonn\'e modules \(M\) and \(N\) receives the structure of a \(\W(k)[V]\)--module, where \(V(x \otimes y) = V(x) \otimes V(y)\).  We define the \textit{tensor product of Dieudonn\'e modules}\footnote{This definition is specialized to \(\F_p\), where we don't have to worry about Frobenius semi-linearity.} by \[M \boxtimes N = \left.\frac{\W(k)[F, V]}{(VF = p)} \otimes_{\W(k)[V]} (M \otimes N) \middle/ \left( \begin{array}{c} 1 \otimes Fx \otimes y = F \otimes x \otimes Vy, \\ 1 \otimes x \otimes Fy = F \otimes Vx \otimes y \end{array} \right) \right. .\]
+The naive tensor product \(M \otimes N\) of Dieudonn\'e modules \(M\) and \(N\) receives the structure of a \(\Z_p[V]\)--module, where \(V(x \otimes y) = V(x) \otimes V(y)\).  We define the \textit{tensor product of Dieudonn\'e modules}\footnote{This definition is specialized to \(\F_p\) and \(\mathbb W_p(\F_p) = \Z_p\), where we don't have to worry about Frobenius semi-linearity.} by \[M \boxtimes N = \left.\frac{\Z_p[F, V]}{(VF = p)} \otimes_{\Z_p[V]} (M \otimes N) \middle/ \left( \begin{array}{c} 1 \otimes Fx \otimes y = F \otimes x \otimes Vy, \\ 1 \otimes x \otimes Fy = F \otimes Vx \otimes y \end{array} \right) \right. .\]
 \end{definition}
 
 \begin{lemma}[{\cite[Corollary 8.14]{GoerssDieudonne}}]
@@ -1062,7 +1065,7 @@ For a ring \(R\), a \index{Dieudonn\'e module!algebra}\textit{Dieudonn\'e \(R\)-
 \end{definition}
 
 \begin{example}[{\cite[Proposition 10.2]{GoerssDieudonne}}]
-Inspired by \Cref{UnstableRWRelation} and our interest in \(H_* \OS{E}{*}\), for a complex-oriented homology theory \(E\) we define its \textit{algebraic Dieudonn\'e \(E_*\)--algebra} by \[R_E = \left. E_*[b_1, b_2, \ldots] \middle/ \left( \begin{array}{c} b(s+t) = b(s) +_E b(t) \end{array} \right) \right.,\] where \(V\) is multiplicative, \(V\) fixes \(E_*\), and \(V\) satisfies \(Vb_{pj} = b_j\).\footnote{If \(E_*\) is torsion-free, then this determines the behavior of \(F\) by \(FV = p\).}  We also write \(D_E = \{D_{2m} H_* \OS{E}{2n}\}\) for the even part of the topological Dieudonn\'e algebra, and these come with natural comparison maps \[R_E \to D_E \to D_* H_* \OS{E}{2*}.\]
+Inspired by \Cref{UnstableRWRelation} and our interest in \(H_* \OS{E}{*}\), for a complex-oriented homology theory \(E\) we define its \textit{algebraic Dieudonn\'e \(E_*\)--algebra} by \[R_E = \left. E_*[b_1, b_2, \ldots] \middle/ \left( \begin{array}{c} b(s+t) = b(s) +_E b(t) \end{array} \right) \right.,\] where \(V\) is multiplicative, \(V\) fixes \(E_*\), and \(V\) satisfies \(Vb_{pj} = b_j\).\footnote{If \(E_*\) is torsion-free, then this determines the behavior of \(F\) by \(FV = p\).}  This is the Dieudonn\'e-theoretic analogue of the algebraic approximation \(\AA(H, E)\).  We also write \(D_E = \{D_{2m} H_* \OS{E}{2n}\}\) for the even part of the topological Dieudonn\'e algebra, and these come with natural comparison maps \[R_E \to D_E \to D_* H_* \OS{E}{2*}.\]
 \end{example}
 
 \begin{theorem}[{\cite[Theorem 11.7]{GoerssDieudonne}}]\label{LandweberFlatUnstableCoopns}
@@ -1073,7 +1076,7 @@ In \Cref{HopfRingForEBP}, we showed that these maps are isomorphisms for \(E = B
 \end{proof}
 
 \begin{remark}
-Goerss's original proof of \Cref{LandweberFlatUnstableCoopns}~\cite{GoerssDieudonne} involved a lot more work, essentially because he didn't want to assume \Cref{HFpBPCooperationsTheorem} or \Cref{HopfRingForEBP}.  Instead, he used the fact that \(\Susp^\infty_+ \Loops^2 S^3\) is a regrading of the ring spectrum \(\bigvee_n B(n)\), together with knowledge of \(BP_* \Loops^2 S^3\).  Since we have already done the hard work of proving \Cref{HFpBPCooperationsTheorem}, we are not obligated to pursue this other line of thought.
+Goerss's original proof of \Cref{LandweberFlatUnstableCoopns}~\cite{GoerssDieudonne} involved a lot more work, essentially because he didn't want to assume \Cref{HFpBPCooperationsTheorem} or \Cref{HopfRingForEBP}.  Instead, he used the fact that \(\Susp^\infty_+ \Loops^2 S^3\) is a regrading of the ring spectrum \(\bigvee_n B(n)\), together with knowledge of \(BP_* \Loops^2 S^3\).
 \end{remark}
 
 \begin{remark}[{\cite[Proposition 11.6, Remark 11.4]{GoerssDieudonne}}]
