--- a/cooperations.tex
+++ b/cooperations.tex
@@ -1068,7 +1068,7 @@ For a ring \(R\), a \index{Dieudonn\'e module!algebra}\textit{Dieudonn\'e \(R\)-
 Inspired by \Cref{UnstableRWRelation} and our interest in \(H_* \OS{E}{*}\), for a complex-oriented homology theory \(E\) we define its \textit{algebraic Dieudonn\'e \(E_*\)--algebra} by \[R_E = \left. E_*[b_1, b_2, \ldots] \middle/ \left( \begin{array}{c} b(s+t) = b(s) +_E b(t) \end{array} \right) \right.,\] where \(V\) is multiplicative, \(V\) fixes \(E_*\), and \(V\) satisfies \(Vb_{pj} = b_j\).\footnote{If \(E_*\) is torsion-free, then this determines the behavior of \(F\) by \(FV = p\).}  This is the Dieudonn\'e-theoretic analogue of the algebraic approximation \(\AA(H, E)\).  We also write \(D_E = \{D_{2m} H_* \OS{E}{2n}\}\) for the even part of the topological Dieudonn\'e algebra, and these come with natural comparison maps \[R_E \to D_E \to D_* H_* \OS{E}{2*}.\]
 \end{example}
 
-\begin{theorem}[{\cite[Theorem 11.7]{GoerssDieudonne}}]\label{LandweberFlatUnstableCoopns}
+\begin{theorem}[{Dieudonn\'e theoretic form of \Cref{LEFTUnstableCooperations}, \cite[Theorem 11.7]{GoerssDieudonne}}]\label{LandweberFlatUnstableCoopns}
 Restricting attention to the even parts, the maps \[R_E \to D_E \to D_* H_* \OS{E}{2*}\] are isomorphisms for \(E\) Landweber flat.
 \end{theorem}
 \begin{proof}
