--- a/characters.tex
+++ b/characters.tex
@@ -115,7 +115,13 @@ There are \(p\)--divisible groups that are \emph{not} built from formal groups, 
 \[
 C_{p^{\infty}} = S^1[p^\infty] = \colim \big ( C_p \hookrightarrow C_{p^2} \hookrightarrow \ldots \big ).
 \]
-It is called \textit{constant} because it is made up of constant group schemes, and it is called height \(1\) because \(|S^1[p]| = p^1\).  The constant \(p\)--divisible group of height \(d\) is then the \(d\)--fold product \(C_{p^\infty}^{\times d} = (S^1)^{\times d}[p^\infty]\).
+It is called \textit{constant} because it is made up of constant group schemes, and it is called height \(1\) because \(|S^1[p]| = p^1\).  The constant \(p\)--divisible group of height \(d\) is then the \(d\)--fold product \(C_{p^\infty}^{\times d} = (S^1)^{\times d}[p^\infty]\). The constant height \(d\) \(p\)-divisible group \(C_{p^\infty}^{\times d}\) is the unique height \(d\) \(p\)-divisible group $\G[p^{\infty}]$ with the property that
+\[
+\sheaf O_{\G[p^k]} \cong \prod_{C_{p^k}^{\times d}}R,
+\]
+where $R$ is the base ring.
+
+%Let \(R\) be a commutative ring. There is a functor from finite abelian groups to finite commutative group schemes over \(\Spec(R)\) sending \(A\) to \(\Spec(\prod_{A}R)\). The constant height \(d\) \(p\)-divisible group \(C_{p^\infty}^{\times d}\) is the unique height \(d\) \(p\)-divisible group with the property that its \(p^k\)-torsion is in the image of this functor for all \(k\).
 
 More generally, a similar description of \(BA_{E}\) can be given using formal geometry when \(A\) is a finite abelian group. Let \(A^*\) be the Pontryagin dual of \(A\) and let
 \[
