change some typesetting

--- a/characters.tex
+++ b/characters.tex
@@ -827,12 +827,12 @@ HC_0P^*(\Fix_d(\Flag(V)))
 \]
 is finitely generated and free over \(HC_0P^*(\Fix_d(X))\). Applying fixed points \((-)^G\) to the exact sequence
 \begin{align*}
-0 \to HC_0P^*(\Fix_d(X)) & \to HC_0P^*(\Fix_d(\Flag(V))) \\
+0 & \to HC_0P^*(\Fix_d(X)) \\
+& \to HC_0P^*(\Fix_d(\Flag(V))) \\
 & \to HC_0P^*(\Fix_d(\Flag(V)) \times_{\Fix_d(X)} \Fix_d(\Flag(V)))
-\end{align*}
-gives an exact sequence
-\begin{align*}
-0 \to HC_0P^*(\Fix_d(X))^G & \to HC_0P^*(\Fix_d(\Flag(V)))^G \\
+\intertext{gives an exact sequence}
+0 & \to HC_0P^*(\Fix_d(X))^G & \\
+& \to HC_0P^*(\Fix_d(\Flag(V)))^G \\
 & \to HC_0P^*(\Fix_d(\Flag(V)) \times_{\Fix_d(X)} \Fix_d(\Flag(V)))^G
 \end{align*}
 since fixed points is left exact. This implies that \(HC_0P^*(EG \times_G \Fix_d(X))\) can be recovered from \(HC_0P^*(EG \times_G-)\) of finite \(G\)--CW complexes with abelian stabilizers.
@@ -860,9 +860,9 @@ and since \(C_{0}^*\) is faithfully flat over \(C_0\), it suffices to prove the 
 \[
 C_0 \otimes_{E^0} E^0(BC_{p^k}) \xrightarrow{\prod C_{0} \otimes_{E^0} E^0(B\alpha)} E^0(B\Lk) \xrightarrow{\mathrm{incl}} \prod_{\alpha \in \Lk^*}C_0.
 \]
-This is the same as the map \(C_0 \otimes_{E^0(B\Lk)} u^*\) built far above.
-
-
+This is the same as the map \(C_0 \otimes_{E^0(B\Lk)} u^*\) built far above.%
+%
+%
 % But the description of the character map in this case from Example \ref{app:charmapexample} agrees with the ring of functions (Equation \ref{app:gfunctions}) on the algebro-geometric map of . 
 %
 %When \(G = C_{p^k}\) and \(X = \ast\), we see from Example \ref{zpk} that the character map reduces to
