clarify an ando example

--- a/powerops.tex
+++ b/powerops.tex
@@ -488,7 +488,7 @@ The usual coordinate on \(\G_m\) with \(x +_{\G_m} y = x + y - xy\) satisfies th
 & & & = \prod_{j=0}^{p-1} (1 - \zeta^j(1 - x)) \\
 & & & = (1 - (1 - x)^p) = p^*(x).
 \end{align*}
-This is exactly the computation that \(g_{[p]}^* \psi_{[p]}^*(x)\) and \(N_{[p]}(x)\) agree for this choice of \(x \in \sheaf O_{\G_m}\).
+This is exactly the computation that \(g_{[p]}^* \psi_{[p]}^*(x) = p^*\) and \(N_{[p]}(x)\) agree for this choice of \(x \in \sheaf O_{\G_m}\).
 \end{example}
 
 The generality with which we approached the proof of \Cref{AndosAlgebraicTheorem} not only clarifies which operations apply to the objects under consideration\footnote{This is meant in contrast to Ando's original proofs~\cite[Section 2.6]{Ando}, where he deals only with coordinates and uses uncomfortable composition operations.}, but it also applies naturally to the other kinds of orientations discussed in \Cref{ChapterSigmaOrientation}.
